dateset/spiderpool-main/charts/spiderpool/operator.yaml
# Source: spiderpool/templates/sriov-network-operator/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamic_parameters
  namespace: dynamic_parameters
  labels:
    
spec:
  replicas: dynamic_parameters
  selector:
    matchLabels:
      
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 33%
  template:
    metadata:
      annotations:
        
      labels:
        
        
    spec:
      nodeSelector:
      affinity:
      tolerations:
      serviceAccountName: dynamic_parameters
      priorityClassName: dynamic_parameters
      imagePullSecrets:
      hostNetwork: dynamic_parameters
      containers:
        - name: dynamic_parameters
          image: dynamic_parameters
          command:
            - sriov-network-operator
          resources:
          imagePullPolicy: dynamic_parameters
