dateset/spiderpool-main/charts/spiderpool/spiderpool_templates_tls_13.yaml
# Source: spiderpool/templates/tls.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: spiderpool-controller
  annotations:
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: spiderpool-controller
      namespace: default
      path: /mutate-spiderpool-spidernet-io-v2beta1-spidersubnet
      port: 5722
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIRENDQWdTZ0F3SUJBZ0lSQUpoOHFXUk5NajRrMVdhVUpoSFU2Z1V3RFFZSktvWklodmNOQVFFTEJRQXcKRnpFVk1CTUdBMVVFQXhNTWMzQnBaR1Z5Ym1WMExtbHZNQ0FYRFRJME1ETXpNVEE0TkRJek5sb1lEekl5TWpRdwpNakV5TURnME1qTTJXakFYTVJVd0V3WURWUVFERXd4emNHbGtaWEp1WlhRdWFXOHdnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQzdiY0FOUzd2Y01xL2VJRzJYMHYzamt5RUJiSzdkeTE5TS9UUWcKYk5SZk9FdUFHcTROSkNXV01OVWVVK2RPdFFJOXV6MzcvNTZ1WW91bUNsV2U4TTlkaDdDSFlvWDFjamNjVzhGZgovbmcxbjU4NnhzTV [...]
  failurePolicy: Fail
  name: spidersubnet.spiderpool.spidernet.io
  rules:
  - apiGroups:
    - spiderpool.spidernet.io
    apiVersions:
    - v2beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - spidersubnets
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: spiderpool-controller
      namespace: default
      path: /mutate-spiderpool-spidernet-io-v2beta1-spidermultusconfig
      port: 5722
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIRENDQWdTZ0F3SUJBZ0lSQUpoOHFXUk5NajRrMVdhVUpoSFU2Z1V3RFFZSktvWklodmNOQVFFTEJRQXcKRnpFVk1CTUdBMVVFQXhNTWMzQnBaR1Z5Ym1WMExtbHZNQ0FYRFRJME1ETXpNVEE0TkRJek5sb1lEekl5TWpRdwpNakV5TURnME1qTTJXakFYTVJVd0V3WURWUVFERXd4emNHbGtaWEp1WlhRdWFXOHdnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQzdiY0FOUzd2Y01xL2VJRzJYMHYzamt5RUJiSzdkeTE5TS9UUWcKYk5SZk9FdUFHcTROSkNXV01OVWVVK2RPdFFJOXV6MzcvNTZ1WW91bUNsV2U4TTlkaDdDSFlvWDFjamNjVzhGZgovbmcxbjU4NnhzTV [...]
  failurePolicy: Fail
  name: spidermultusconfig.spiderpool.spidernet.io
  rules:
  - apiGroups:
    - spiderpool.spidernet.io
    apiVersions:
    - v2beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - spidermultusconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: spiderpool-controller
      namespace: default
      path: /mutate-spiderpool-spidernet-io-v2beta1-spiderippool
      port: 5722
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIRENDQWdTZ0F3SUJBZ0lSQUpoOHFXUk5NajRrMVdhVUpoSFU2Z1V3RFFZSktvWklodmNOQVFFTEJRQXcKRnpFVk1CTUdBMVVFQXhNTWMzQnBaR1Z5Ym1WMExtbHZNQ0FYRFRJME1ETXpNVEE0TkRJek5sb1lEekl5TWpRdwpNakV5TURnME1qTTJXakFYTVJVd0V3WURWUVFERXd4emNHbGtaWEp1WlhRdWFXOHdnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQzdiY0FOUzd2Y01xL2VJRzJYMHYzamt5RUJiSzdkeTE5TS9UUWcKYk5SZk9FdUFHcTROSkNXV01OVWVVK2RPdFFJOXV6MzcvNTZ1WW91bUNsV2U4TTlkaDdDSFlvWDFjamNjVzhGZgovbmcxbjU4NnhzTV [...]
  failurePolicy: Fail
  name: spiderippool.spiderpool.spidernet.io
  rules:
  - apiGroups:
    - spiderpool.spidernet.io
    apiVersions:
    - v2beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - spiderippools
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: spiderpool-controller
      namespace: default
      path: /mutate-spiderpool-spidernet-io-v2beta1-spiderreservedip
      port: 5722
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIRENDQWdTZ0F3SUJBZ0lSQUpoOHFXUk5NajRrMVdhVUpoSFU2Z1V3RFFZSktvWklodmNOQVFFTEJRQXcKRnpFVk1CTUdBMVVFQXhNTWMzQnBaR1Z5Ym1WMExtbHZNQ0FYRFRJME1ETXpNVEE0TkRJek5sb1lEekl5TWpRdwpNakV5TURnME1qTTJXakFYTVJVd0V3WURWUVFERXd4emNHbGtaWEp1WlhRdWFXOHdnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQzdiY0FOUzd2Y01xL2VJRzJYMHYzamt5RUJiSzdkeTE5TS9UUWcKYk5SZk9FdUFHcTROSkNXV01OVWVVK2RPdFFJOXV6MzcvNTZ1WW91bUNsV2U4TTlkaDdDSFlvWDFjamNjVzhGZgovbmcxbjU4NnhzTV [...]
  failurePolicy: Fail
  name: spiderreservedip.spiderpool.spidernet.io
  rules:
  - apiGroups:
    - spiderpool.spidernet.io
    apiVersions:
    - v2beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - spiderreservedips
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: spiderpool-controller
      namespace: default
      path: /mutate-spiderpool-spidernet-io-v2beta1-spidercoordinator
      port: 5722
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIRENDQWdTZ0F3SUJBZ0lSQUpoOHFXUk5NajRrMVdhVUpoSFU2Z1V3RFFZSktvWklodmNOQVFFTEJRQXcKRnpFVk1CTUdBMVVFQXhNTWMzQnBaR1Z5Ym1WMExtbHZNQ0FYRFRJME1ETXpNVEE0TkRJek5sb1lEekl5TWpRdwpNakV5TURnME1qTTJXakFYTVJVd0V3WURWUVFERXd4emNHbGtaWEp1WlhRdWFXOHdnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQzdiY0FOUzd2Y01xL2VJRzJYMHYzamt5RUJiSzdkeTE5TS9UUWcKYk5SZk9FdUFHcTROSkNXV01OVWVVK2RPdFFJOXV6MzcvNTZ1WW91bUNsV2U4TTlkaDdDSFlvWDFjamNjVzhGZgovbmcxbjU4NnhzTV [...]
  failurePolicy: Fail
  name: spidercoordinator.spiderpool.spidernet.io
  rules:
  - apiGroups:
    - spiderpool.spidernet.io
    apiVersions:
    - v2beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - spidercoordinators
  sideEffects: None
